42- Ingress-CLB-Basic/02-Ingress-CLB-LoadBalancer-Service.yml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-clb-demo
  annotations:
    # Load Balancer Name
    service.ingress.kubernetes.io/load-balancer-name: ingress-clb
    # Ingress Core Settings
    #kubernetes.io/ingress.class: "alb" (OLD INGRESS CLASS NOTATION - STILL WORKS BUT RECOMMENDED TO USE IngressClass Resource)
    #alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: 'true'
    #alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/rewrite-target: /$2  
    ## SSL Settings
    #alb.ingress.kubernetes.io/listen-ports: 80
    #kubernetes.io/listen-ports: 80
    #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:202341818030:certificate/03fbbdc4-3bef-44e1-b3ce-3a63df1aefc5
    #alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01 #Optional (Picks default if not used)
     # SSL Redirect Setting
    #alb.ingress.kubernetes.io/ssl-redirect: "false"
 
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "3600"
    service.beta.kubernetes.io/aws-load-balancer-type: nlb



spec:
  ingressClassName: my-aws-ingress-class   # Ingress Class                       
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app3-nginx-clusterip-service
                port: 
                  number: 80
         
 

# Important Note-1: In path based routing order is very important, if we are going to use  "/*", try to use it at the end of all rules.                                        
                        
# 1. If  "spec.ingressClassName: my-aws-ingress-class" not specified, will reference default ingress class on this kubernetes cluster
# 2. Default Ingress class is nothing but for which ingress class we have the annotation `ingressclass.kubernetes.io/is-default-class: "true"`
